# eval-lab-v0

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  Makefile  PRD.md  README.md  pyproject.toml
data/: ground_truth.json
data/transcripts/: aishwarya_kiriti.txt  aman_khan.txt  brendan_foody.txt  cat_wu.txt  hamel_shreya.txt  itamar_gilad.txt  kevin_weil.txt  marily_nika.txt
src/: report.py  runner.py  viz.py
src/evals/: code_based.py  human.py  llm_judge.py
